--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.6.7",
     "material-react-table": "^2.12.1",
     "react": "^18.2.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.51.0",
